<resources>
    <string name="app_name">DriveDoctor</string>
    <string name="titleApp">DRIVE DOCTOR</string>

    <string name="signIn"><b>Login</b></string>
    <string name="noAccount">Don\'t have an account? <b><font color="@android:color/holo_red_light">SIGNUP</font></b></string>
    <string name="signup">Signup</string>

    <string name="hello"><b>Hello</b> World, fh!</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgetPassword">Forget Password ?</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone Number</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="isServiceProvider">Is Service Provider</string>
    <string name="submit">Submit</string>
    <string name="editprofile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="pickupNeeded">Pickup Needed</string>
    <string name="dropOffNeeded">Drop off Needed</string>
    <string name="search">Search</string>




    <string name="loading">Loading</string>


    <string name="myCars">My Cars</string>
    <string name="myAppointments">My Appointments</string>

    <string name="clientName">Client Name</string>


    <string name="noClientsAvailable">No clients available</string>
    <string name="idMyClientsActivityEditBtn">Edit</string>
    <string name="Service_type">Service Type</string>



    <string-array name="car_services">
        <item>Suspension service</item>
        <item>AC service</item>
        <item>Battery replacement</item>
        <item>Electrical system repair</item>
        <item>Fuel system service</item>
        <item>Cooling system service</item>
        <item>Oil Change</item>
        <item>Tire replacement/rotation</item>
        <item>Brake Inspection</item>
        <item>Wheel Alignment</item>
        <item>Battery Check</item>
        <item>Engine Tune-Up</item>
        <item>Air Conditioning Service</item>
        <item>Transmission Service</item>
        <item>Exhaust System Repair</item>
        <item>Other</item>
    </string-array>



    <string-array name="carsCompanies">
        <item>Acura</item>
        <item>Alfa</item>
        <item>Aston</item>
        <item>Audi</item>
        <item>Bentley</item>
        <item>Bmw</item>
        <item>Chevrolet</item>
        <item>Chrysler</item>
        <item>Dacia</item>
        <item>Ferrari</item>
        <item>Fiat</item>
        <item>Ford</item>
        <item>Gmc</item>
        <item>Honda</item>
        <item>Hummer</item>
        <item>Hyundai</item>
        <item>Infiniti</item>
        <item>Isuzu</item>
        <item>Jaguar</item>
        <item>Jeep</item>
        <item>Kia</item>
        <item>Land</item>
        <item>Lexus</item>
        <item>Lincoln</item>
        <item>Mazda</item>
        <item>Mercedes</item>
        <item>Mg</item>
        <item>Mini</item>
        <item>Nissan</item>
        <item>Opel</item>
        <item>Porsche</item>
        <item>Renault</item>
        <item>Rover</item>
        <item>Saab</item>
        <item>Skoda</item>
        <item>Subaru</item>
        <item>Tesla</item>
        <item>Toyota</item>
        <item>Volkswagen</item>
        <item>Volvo</item>
    </string-array>

    <string-array name="carsModelYears">
    <item>1950</item>
    <item>1951</item>
    <item>1952</item>
    <item>1953</item>
    <item>1954</item>
    <item>1955</item>
    <item>1956</item>
    <item>1957</item>
    <item>1958</item>
    <item>1959</item>
    <item>1960</item>
    <item>1961</item>
    <item>1962</item>
    <item>1963</item>
    <item>1964</item>
    <item>1965</item>
    <item>1966</item>
    <item>1967</item>
    <item>1968</item>
    <item>1969</item>
    <item>1970</item>
    <item>1971</item>
    <item>1972</item>
    <item>1973</item>
    <item>1974</item>
    <item>1975</item>
    <item>1976</item>
    <item>1977</item>
    <item>1978</item>
    <item>1979</item>
    <item>1980</item>
    <item>1981</item>
    <item>1982</item>
    <item>1983</item>
    <item>1984</item>
    <item>1985</item>
    <item>1986</item>
    <item>1987</item>
    <item>1988</item>
    <item>1989</item>
    <item>1990</item>
    <item>1991</item>
    <item>1992</item>
    <item>1993</item>
    <item>1994</item>
    <item>1995</item>
    <item>1996</item>
    <item>1997</item>
    <item>1998</item>
    <item>1999</item>
    <item>2000</item>
    <item>2001</item>
    <item>2002</item>
    <item>2003</item>
    <item>2004</item>
    <item>2005</item>
    <item>2006</item>
    <item>2007</item>
    <item>2008</item>
    <item>2009</item>
    <item>2010</item>
    <item>2011</item>
    <item>2012</item>
    <item>2013</item>
    <item>2014</item>
    <item>2015</item>
    <item>2016</item>
    <item>2017</item>
    <item>2018</item>
    <item>2019</item>
    <item>2020</item>
    <item>2021</item>
    <item>2022</item>
    </string-array>

    <string name="nocarsMessage">No cars in the list</string>
    <string name="noAppointmentsMessage">No appointments available</string>

    <string name="bookAppointment">Book an Appointment</string>
    <string name="abcServiceProvider">ABC Service Provider</string>
    <string name="provideRequiredDetails">*Provide the required details</string>
    <string name="pickDate">Pick a Date</string>
    <string name="description">Description</string>
    <string name="addBooking">Add Booking</string>

    <string name="selectadate">Select a date</string>
    <string name="addServiceDescription">Add service details</string>
    <string name="amount">Amount</string>






    <!--    <string name="bookServiceProviders">Book For Service</string>-->

    <string name="addANewCar">Add a new Car</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="platenumber">Plate number</string>
    <string name="modelYear">Model Year</string>
    <string name="addANewCarImmediateService">Add below deatils and get immediate Service</string>
    <string name="addCarButton">Add Car</string>
    <string name="viewCars"><u>View Cars</u></string>




<!--    Service Providers-->

    <string name="noserviceProvidersMessage">No service providers available</string>
    <string name="serviceProviders">Servicr Providers</string>


    <string name="myclients">My Clients</string>



    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation_main">NavigationMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--    <string name="menu_home">Home</string>-->
    <!--    <string name="menu_gallery">Gallery</string>-->
    <!--    <string name="menu_slideshow">Slideshow</string>-->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>