<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".postAuth.AddCarActivity">


    <TextView
        android:id="@+id/idTextViewaddANewCarImmediateService"
        android:layout_width="347dp"
        android:layout_height="56dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:text="@string/addANewCarImmediateService"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/idButtonAddCar"
        android:layout_width="345dp"
        android:layout_height="48dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="57dp"
        android:background="@drawable/common_primary_button"
        android:text="@string/addCarButton"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/id_addcar_selectCompanySpinner"
        android:layout_width="226dp"
        android:layout_height="42dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="33dp"
        android:background="#FFFFFF"
        android:entries="@array/carsCompanies"
        android:foregroundTint="#0B0A0A"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/idTextViewaddANewCarImmediateService"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="42dp"
        android:text="@string/modelYear"
        android:textColor="#FBFBFB"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Spinner
        android:id="@+id/id_addcar_selectyear_spinner"
        android:layout_width="226dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="33dp"
        android:background="#FFFFFF"
        android:entries="@array/carsModelYears"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/id_addcar_selectCompanySpinner"
        tools:ignore="TouchTargetSizeCheck" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/id_addCar_CarName_EditView"
        android:layout_width="354dp"
        android:layout_height="42dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="28dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:hint="@string/name"
        android:inputType="text"
        android:maxLength="10"
        android:minHeight="48dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="#090909"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_addcar_selectyear_spinner"
        tools:ignore="LabelFor,TouchTargetSizeCheck"
        tools:maxLength="25" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/id_addCar_PlateNumber_EditView"
        android:layout_width="347dp"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:hint="@string/platenumber"
        android:inputType="text"
        android:maxLength="6"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="#090909"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_addCar_CarName_EditView"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="91dp"
        android:text="@string/company"
        android:textColor="#FBFBFB"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTextViewaddANewCarImmediateService" />

</androidx.constraintlayout.widget.ConstraintLayout>