<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:background="@drawable/background"

    android:gravity="bottom"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="405dp"
        android:layout_height="294dp">

        <ImageView
            android:id="@+id/id_drawer_editProfile_imageView"
            android:layout_width="49dp"
            android:layout_height="48dp"
            android:layout_marginStart="132dp"
            android:adjustViewBounds="true"
            android:padding="15dp"
            android:scaleType="fitEnd"
            app:layout_constraintStart_toEndOf="@+id/id_drawer_userImage_imageView"
            app:layout_constraintTop_toTopOf="@+id/id_drawer_userImage_imageView"
            app:srcCompat="@drawable/editicon" />

        <TextView
            android:id="@+id/id_drawer_email_textView"
            android:layout_width="400dp"
            android:layout_height="22dp"
            android:layout_marginTop="9dp"
            android:paddingLeft="80dp"
            android:text="@string/nav_header_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_drawer_username_textview" />

        <TextView
            android:id="@+id/id_drawer_username_textview"
            android:layout_width="406dp"
            android:layout_height="38dp"
            android:layout_marginTop="17dp"
            android:paddingLeft="80dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_drawer_userImage_imageView" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/id_drawer_userImage_imageView"
            android:layout_width="107dp"
            android:layout_height="99dp"
            android:layout_marginTop="57dp"
            android:contentDescription="@string/nav_header_desc"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedSquare"
            app:srcCompat="@drawable/appicon" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>